--- a/Tema1.html
+++ b/Tema1.html
@@ -43,6 +43,10 @@
           <select class="nav-link" id="themeSelect">
             <option value="default">Claro</option>
             <option value="dark">Obscuro</option>
+            <option value="blue">Azul</option>
+            <option value="purple">Morado</option>
+            <option value="colors1">Colores 1</option>
+            <option value="blue/green">Azul/Verde</option>
           </select>
         </li>
       </ul>
@@ -491,6 +495,7 @@
   <!---------------------------------------------------------------------------------------------------------------------------------------->
 
   <script src="script.js"></script>
+  <!--
   <script>
     var popoverTriggerList = [].slice.call(
       document.querySelectorAll('[data-bs-toggle="popover"]')
@@ -521,6 +526,7 @@
 
     initThemeSelector();
   </script>
+  -->
 </body>
 
 </html>
