--- a/Tema1.html
+++ b/Tema1.html
@@ -45,6 +45,7 @@
             <option value="dark">Obscuro</option>
             <option value="blue">Azul</option>
             <option value="purple">Morado</option>
+            <!--<option value="green">Verde</option>-->
             <option value="colors1">Colores 1</option>
             <option value="blue/green">Azul/Verde</option>
           </select>
@@ -371,7 +372,7 @@
                   8
                 </button>
                 =
-                <button type="button" class="btn boton-alg" data-bs-toggle="popover" title="No es correcto"
+                <button type="button" class="btn boton-alg" data-bs-toggle="popover" title="Es correcto"
                   data-bs-content="Total de chocolates que tiene Silvia después de haberse comido 8" id="bg-btn-alg">
                   m
                 </button>
