--- a/index.html
+++ b/index.html
@@ -35,13 +35,13 @@
       <span style="--l: 'Álgebra';">Álgebra</span>
     </div>
     <p id="CoverText">Una forma sencilla de aprender</p>
-    <a href="./NotFound.html">    <button type="button" class="btn btn-outline-info btn-lg">Empezar</button></a>
+    <a href="#Content">    <button type="button" class="btn btn-outline-info btn-lg">Empezar</button></a>
 
-    <a href="#Content" class="next" id="down_arrow">   
+    <!--<a href="#Content" class="next" id="down_arrow">   
       <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-chevron-down" viewBox="0 0 16 16">
         <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"/>
       </svg>
-    </a>
+    </a>-->
 
   </header>
 
@@ -56,13 +56,12 @@
     </div>
 
     <div class="row text-light" id="Sb1">
-      <div class="col-md-6 p-4 my-2 d-flex justify-content-center align-items-center">
+      <div class="col-md-6 d-flex justify-content-center align-items-center">
         <p class="h3">Introducción al álgebra</p>
       </div>
-      <div class="col-md-6 p-4 my-2 d-flex justify-content-center" id="content-text">
+      <div class="col-md-6 d-flex justify-content-center align-items-center" id="content-text">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci sed
-          unde magnam quo perferendis aperiam. <br />
+          Diferencia entre el álgebra y la aritmética, Ejemplos de problemas de álgebra y aritmética, Expresiones matemáticas y Ejemplos de ecuaciones matemáticas. <br />
           <br />
           <a href="./Tema1.html" class="btn btn-light" id="contentButton"><span>Ir a la lección</span></a>
         </p>
@@ -70,29 +69,40 @@
     </div>
 
     <div class="row text-light" id="Sb2">
-      <div class="col-md-6 p-4 my-2 d-flex justify-content-center align-items-center">
+      <div class="col-md-6 d-flex justify-content-center align-items-center">
         <p class="h3">Elementos de una expresión algebraica</p>
       </div>
-      <div class="col-md-6 p-4 my-2 d-flex justify-content-center" id="content-text">
+      <div class="col-md-6 d-flex justify-content-start align-items-center" id="content-text">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci sed
-          unde magnam quo perferendis aperiam. <br />
+          Definición, Elementos de un término algebraico y Ejemplos de un término algebraico. <br />
           <br />
-          <a href="./Tema1.html" class="btn btn-light disabled" id="contentButton"><span>Ir a la lección</span></a>
+          <a href="./Tema2.html" class="btn btn-light" id="contentButton"><span>Ir a la lección</span></a>
         </p>
       </div>
     </div>
 
     <div class="row text-light" id="Sb3">
-      <div class="col-md-6 p-4 my-2 d-flex justify-content-center align-items-center">
+      <div class="col-md-6 d-flex justify-content-center align-items-center">
         <p class="h3">Traducción de expresiones algebraicas</p>
       </div>
-      <div class="col-md-6 p-4 my-2 d-flex justify-content-center" id="content-text">
+      <div class="col-md-6 d-flex justify-content-start align-items-center" id="content-text">
         <p>
-          Lorem ipsum dolor sit amet, consectetur adipisicing elit. Adipisci sed
-          unde magnam quo perferendis aperiam. <br />
+          Interpretación, Ejemplos de traducción de expresiones. <br />
           <br />
-          <a href="./Tema1.html" class="btn btn-light disabled" id="contentButton"><span>Ir a la lección</span></a>
+          <a href="./Tema3.html" class="btn btn-light" id="contentButton"><span>Ir a la lección</span></a>
+        </p>
+      </div>
+    </div>
+
+    <div class="row text-light" id="Sb4">
+      <div class="col-md-6 d-flex justify-content-center align-items-center">
+        <p class="h3">Memorama</p>
+      </div>
+      <div class="col-md-6 d-flex justify-content-start align-items-center" id="content-text">
+        <p>
+          Un clásico juego que pondrá a prueba tus conocimientos. <br />
+          <br />
+          <a href="./JuegoMenu.html" class="btn btn-light" id="contentButton"><span>Jugar</span></a>
         </p>
       </div>
     </div>
